[package]
name = "breadx-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
breadx = { path = "../breadx/breadx", default-features = false }
bytemuck = "1.9.1"
tracing = { version = "0.1.34", default-features = false }

[dev-dependencies]
criterion = "0.3.5"
fastrand = "1.7.0"

[[bench]]
name = "encode_decode"
harness = false
